--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           { type: 'text', text: 'Prayer to avoid the torture of the grave and the slander of the grave, and so that the body is not eaten by the earth while in the grave', style: 'font-bold text-center' },
           { type: 'arabic', text: 'بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيمِ\nاللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنَ الشِّرْكِ وَالْكُفْرِ وَالْفَقْرِ فَاغْفِرْ لِي وَارْحَمْنِي وَأَكْثِرْ أَمْوَالِي وَأَعُوذُ بِكَ مِنْ عَذَابِ الْقَبْرِ وَفِتْنَتِهِ فَحَرِّمْ جَسَدِي عَلَى الْأَرْضِ وَمَا فِيهَا وَأَعُوذُ بِكَ مِنَ الْحِسَابِ وَعَذَابِ النَّارِ فَأَدْخِلْنَا الْجَنَّةَ بِغَيْرِ حِسَابٍ يَا حَيُّ يَا قَيُّومُ يَا ذَا الْجَلَالِ وَالْإِكْرَامِ يَا أَرْحَمَ الرَّاحِمِينَ' },
           { type: 'hr' },
-          { type: 'text', text: '"In the name of Allah, the Most Gracious, the Most Merciful. O Allah! I seek refuge in You from polytheism, disbelief, and poverty. So forgive me, have mercy on me, and increase my wealth. And I seek refuge in You from the punishment of the grave and its trials. So forbid my body to the earth and whatever is in it. And I seek refuge in You from the Reckoning and the punishment of the Fire. So admit us into Paradise without reckoning. O Ever-Living, O Self-Subsisting, O Possessor of Majesty and Honor, O Most Merciful of the merciful."' }
+          { type: 'text', text: '"Allah - beginning with the name of - the Most Gracious, the Most Merciful. O Allah! I seek refuge in You from polytheism, disbelief, and poverty. So forgive me, have mercy on me, and increase my wealth. And I seek refuge in You from the punishment of the grave and its trials. So forbid my body to the earth and whatever is in it. And I seek refuge in You from the Reckoning and the punishment of the Fire. So admit us into Paradise without reckoning. O Ever-Living, O Self-Subsisting, O Possessor of Majesty and Honor, O Most Merciful of the merciful."' }
         ]
       }
     ]
@@ -650,7 +650,7 @@
           { type: 'text', text: 'Morning extends from the middle of the night until sunrise.', style: 'text-center font-bold mb-8 opacity-70' },
           { type: 'section-title', text: '1. Protection from Shaytan' },
           { type: 'arabic-indopak', text: 'بِسْمِ اللهِ الرَّحْمْنِ الرَّحِيْمِ وَ لاَ حَوْلَ وَ لاَ قُوَّةَ اِلأَبِللهِ العَلِىِّ العَظِيمِ' },
-          { type: 'text', text: 'In the name of Allah, the Beneficent, the Merciful. There is no power and no strength except with Allah, the Most High, the Supreme.' },
+          { type: 'text', text: 'Allah - beginning with the name of - the Most Gracious, the Most Merciful. There is no power and no strength except with Allah, the Most High, the Supreme.' },
           { type: 'hr' },
           { type: 'section-title', text: '2. Increase Faith (41 Times)' },
           { type: 'arabic-indopak', text: 'يَا حَىُّ يَا قَيُوْمُ لا إِلهَ إِلاَ أَنْتَ' },
