--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <meta name="apple-mobile-web-app-title" content="Qalb-e-Dua">
     <title>Qalb-e-Dua</title>
     
-    <!-- APP ICON -->
-<link rel="icon" type="image/png" href="icon.png">
-<link rel="apple-touch-icon" href="icon.png">
-<link rel="shortcut icon" href="icon.png">
+   <head>
+    <!-- Other lines like meta charset, title, etc... -->
+
+    <title>Qulb e Dua</title>
+
+    <!-- NEW ICON CODE -->
+    <link rel="icon" type="image/png" href="icon.png?v=2">
+    <link rel="apple-touch-icon" href="icon.png?v=2">
+    <link rel="shortcut icon" href="icon.png?v=2">
+
+    <!-- Make sure that long "data:image/svg..." line is DELETED -->
+
+</head>
     <!-- TAILWIND CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     
