--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <title>Qalb-e-Dua</title>
     
     <!-- APP ICONS -->
-    <link rel="icon" type="image/png" href="icon.png?v=2">
-    <link rel="apple-touch-icon" href="icon.png?v=2">
-    <link rel="shortcut icon" href="icon.png?v=2">
-
+    <link rel="icon" type="image/png" href="apple-touch-icon.png?v=4">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png?v=4">
+    <link rel="shortcut icon" href="apple-touch-icon.png?v=4">
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
