--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="apple-mobile-web-app-title" content="Qalb-e-Dua">
     <title>Qalb-e-Dua</title>
     
-    <!-- APP ICONS -->
-    <link rel="icon" type="image/png" href="apple-touch-icon.png?v=6">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png?v=6">
-    <link rel="shortcut icon" href="apple-touch-icon.png?v=6">
+    <!-- APP ICONS (Full Website Link) -->
+    <link rel="icon" type="image/png" href="https://qalb-e-dua.github.io/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="https://qalb-e-dua.github.io/apple-touch-icon.png">
+    <link rel="shortcut icon" href="https://qalb-e-dua.github.io/apple-touch-icon.png">
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
