--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <meta name="apple-mobile-web-app-title" content="Qalb-e-Dua">
     <title>Qalb-e-Dua</title>
     
-    <!-- APP ICONS (Full Website Link) -->
+    <!-- SOCIAL MEDIA PREVIEW (This fixes the Shared Link picture) -->
+    <meta property="og:title" content="Qalb-e-Dua">
+    <meta property="og:image" content="https://qalb-e-dua.github.io/apple-touch-icon.png?v=99">
+
+    <!-- APP ICONS -->
     <link rel="icon" type="image/png" href="https://qalb-e-dua.github.io/apple-touch-icon.png">
     <link rel="apple-touch-icon" href="https://qalb-e-dua.github.io/apple-touch-icon.png">
     <link rel="shortcut icon" href="https://qalb-e-dua.github.io/apple-touch-icon.png">
