--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             { id: 'm2', label: 'Names of Allah', pageId: 'p2' },
             { id: 'm3', label: 'Names of Prophet ﷺ', pageId: 'p3' },
             { id: 'm4', label: 'Prayers after Salah', pageId: 'p4' },
-            { id: 'm5', label: 'Prayer in Grave', pageId: 'p5' },
+            { id: 'm5', label: 'Duas when Visiting Graves', pageId: 'p5' },
             { id: 'm6', label: 'Prayers of the Prophet ﷺ', pageId: 'p6' },
             { id: 'm7', label: "Du'a for Shifa", pageId: 'p7' },
             { id: 'm8', label: 'Victory & Protection', pageId: 'p8' },
@@ -343,7 +343,7 @@ const PAGES_DATA = {
           },
           'p5': {
             id: 'p5',
-            title: 'Prayer in Grave',
+            title: 'Duas when Visiting Graves',
             cards: [
               {
                 variant: 'default',
