--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ const PAGES_DATA = {
                 variant: 'default',
                 content: [
                   { type: 'section-title', text: 'During Salah' },
-                   { type: 'text', text: 'Rasulullah (peace be upon him) always recited it during Salah Before Salam.' },
+                   { type: 'text', text: 'Rasulullah (ﷺ) always recited it during Salah Before Salam.' },
                   { type: 'arabic', text: 'اللَّهُمَّ اغْفِرْ لِي مَا قَدَّمْتُ وَمَا أَخَّرْتُ وَمَا أَسْرَرْتُ وَمَا أَعْلَنْتُ وَمَا أَسْرَفْتُ وَمَا أَنْتَ أَعْلَمُ بِهِ مِنِّي أَنْتَ الْمُقَدِّمُ وَأَنْتَ الْمُؤَخِّرُ لاَ إِلَهَ إِلاَّ أَنْتَ' },
                   { type: 'text', text: 'Ya Allah, forgive me for the sins I have committed and the sins I have delayed, and the sins I have hidden and the sins I have revealed, and the sins that exceeded my limits and the sins that You know better than me. You are the One Who brings forward and the One Who delays, there is no god except You. [HR. Muslim: 771]' }
                 ]
@@ -594,7 +594,7 @@ const PAGES_DATA = {
                  variant: 'default',
                  content: [
                     { type: 'section-title', text: 'Removing Anger' },
-                    { type: 'text', text: 'Our Prophet (peace and blessings be upon him), when our mother Aisha (may Allah be pleased with her) was angry, advised her to make the following dua:' },
+                    { type: 'text', text: 'Our Prophet (ﷺ), when our mother Aisha (may Allah be pleased with her) was angry, advised her to make the following dua:' },
                     { type: 'arabic', text: 'اللَّهُمَّ اغْفِرْ لِي ذَنْبِي وَأَذْهِبْ غَيْظَ قَلْبِي وَأَجِرْنِي مِنْ مُضِلاَّتِ الْفِتَنِ' },
                     { type: 'text', text: '"O Allah! Forgive my sin, remove the anger from my heart, and protect me from misleading trials." (Tabarani, el-Mu\'cemü\'l-Kebir, XXIII, 338, No: 785)' }
                  ]
@@ -612,7 +612,7 @@ const PAGES_DATA = {
                  variant: 'default',
                  content: [
                     { type: 'section-title', text: 'Prayer Before Sleeping (Wudu)' },
-                    { type: 'text', text: 'The Messenger of Allah (peace and blessings be upon him) advised to perform ablution before sleeping and recite the following supplication:' },
+                    { type: 'text', text: 'The Messenger of Allah (ﷺ) advised to perform ablution before sleeping and recite the following supplication:' },
                     { type: 'arabic', text: 'اللَّهُمَّ أَسْلَمْتُ نَفْسِي إِلَيْكَ، وَوَجَّهْتُ وَجْهِي إِلَيْكَ، وَفَوَّضْتُ أَمْرِي إِلَيْكَ، وَأَلْجَأْتُ ظَهْرِي إِلَيْكَ، رَغْبَةً وَرَهْبَةً إِلَيْكَ، لاَ مَلْجَأَ وَلاَ مَنْجَا مِنْكَ إِلاَّ إِلَيْكَ، آمَنْتُ بِكِتَابِكَ الَّذِي أَنْزَلْتَ، وَبِنَبِيِّكَ الَّذِي أَرْسَلْتَ' },
                     { type: 'text', text: '"O Allah! I have surrendered myself to You. I have turned my face to You. I have entrusted my affair to You. I have learned my back on You, out of desire for You and fear of You. There is no refuge and no escape from You except to You. I believe in Your Book which You revealed and Your Prophet whom You sent." (Bukhari, Da\'awat, 6, 7, 9; Muslim, Dhikr and Dua, 56-57; Abu Dawud, Adab, 98; Tirmidhi, Da\'awat 16; Ibn Majah, Dua, 15)' }
                  ]
