--- a/index.html
+++ b/index.html
@@ -319,52 +319,28 @@ const PAGES_DATA = {
       }
     ]
   },
-  p4': { 
-          id: 'p4', 
-          title: 'Prayers after Salah', 
-          cards: [ 
-            { 
-              variant: 'default', 
-              content: [ 
-                { type: 'section-title', text: 'Supplications Before Salam' }, 
-                { type: 'text', text: 'After the Tashahhud and Salawat, one should make a supplication such as:' }, 
-                { type: 'arabic', text: 'اللَّهُمَّ اغْفِرْلِي وَلِوَالِدَيَّ وَلِمَنْ تَوَالَدَ وَلِجَمِيعِ الْمُؤْمِنِينَ وَالْمُؤْمِنَاتِ وَالْمُسْلِمِينَ وَالْمُسْلِمَاتِ الْأَحْيَاءِ مِنْهُمْ وَالْأَمْوَاتِ إِنَّكَ مُجِيبُ الدَّعَوَاتِ بِرَحْمَتِكَ يَا أَرْحَمَ الرَّاحِمِينَ' }, 
-                { type: 'text', text: '"O Allah, forgive me and my parents and all those who are born and all the believing men and women, those who have submitted from the males and females, those of them who are alive and those who have died. Verily, You are the One Who answers prayers... through Your Mercy, O the Most Merciful of those who show mercy."' }, 
-                { type: 'hr' }, 
-                { type: 'text', text: 'Or pray:' }, 
-                { type: 'arabic', text: 'اللَّهُمَّ رَبِّ اجْعَلْنِي مُقِيمَ الصَّلَاةِ وَمِنْ ذُرِّيَّتِي رَبَّنَا وَتَقَبَّلْ دُعَاءِ رَبَّنَا اغْفِرْ لِي وَلِوَالِدَيَّ وَلِلْمُؤْمِنِينَ يَوْمَ يَقُومُ الْحِسَابُ' }, 
-                { type: 'text', text: '"O Allah, my Lord. Make me establish the prayer, and my offspring; O our Lord! Accept my prayer. O our Lord! Forgive me, and my parents, and all the believers on the Day when Reckoning will take place."' } 
-              ] 
-            }, 
-            { 
-              variant: 'default', 
-              content: [ 
-                { type: 'section-title', text: 'Comprehensive Dua After Salah' }, 
-                { type: 'arabic', text: 'ٱلْحَمْدُ لِلّٰهِ رَبِّ الْعَالَمِينَ' },
-                { type: 'text', text: 'All praise is due to Allah Taala, Creator of all the worlds.' },
-                { type: 'hr' },
-                { type: 'arabic', text: 'وَٱلصَّلَاةُ وَٱلسَّلَامُ عَلَىٰ رَسُولِنَا مُحَمَّدٍ وَآلِهِ وَصَحْبِهِ أَجْمَعِينَ' },
-                { type: 'text', text: 'May peace and blessings be upon Prophet Muhammed ‘alayhis-salam, and on his blessed family and noble companions.' },
-                { type: 'hr' },
-                { type: 'arabic', text: 'ٱللّٰهُمَّ ٱغْفِرْ وَٱرْحَمْ وَأَنْتَ خَيْرُ ٱلرَّاحِمِينَ، تَوَفَّنِي مُسْلِمًا وَأَلْحِقْنِي بِٱلصَّالِحِينَ' },
-                { type: 'text', text: 'Oh Allah! Accept the salat that I have performed! Make my last breath be by saying Kalimat ash-Shahada and my migration to the Hereafter be with iman. Forgive and pardon my relatives that have died. Cause me to die as a Muslim and join the righteous.' },
-                { type: 'hr' },
-                { type: 'arabic', text: 'ٱللّٰهُمَّ ٱغْفِرْ لِي وَلِوَالِدَيَّ وَلِأُسْتَاذِيَّ وَلِلْمُؤْمِنِينَ وَٱلْمُؤْمِنَاتِ يَوْمَ يَقُومُ ٱلْحِسَابُ' },
-                { type: 'text', text: 'Oh Allah! Protect me from the evil of Satan, the evil of enemies and the evil of my nafs! Grant goodness, halal and auspicious sustenance to our home! Grant salvation to Muslims! Make the enemies of Muslims wretched and dispersed! With Your Divine Help, help Muslims that are making jihad against unbelievers!' },
-                { type: 'hr' },
-                { type: 'arabic', text: 'ٱللّٰهُمَّ إِنَّكَ عَفُوٌّ كَرِيمٌ تُحِبُّ ٱلْعَفْوَ فَٱعْفُ عَنِّي' },
-                { type: 'text', text: 'Oh Allah! You are the One who pardons and forgives. You love to pardon, pardon me. Grant recovery to the ill among us, grant relief to those who are with difficulties among us!' },
-                { type: 'hr' },
-                { type: 'arabic', text: 'ٱللّٰهُمَّ إِنِّي أَسْأَلُكَ ٱلصِّحَّةَ وَٱلْعَافِيَةَ وَٱلْأَمَانَةَ وَحُسْنَ ٱلْخُلُقِ وَٱلرِّضَاءَ بِٱلْقَدَرِ بِرَحْمَتِكَ يَا أَرْحَمَ ٱلرَّاحِمِينَ، آمِينَ' },
-                { type: 'text', text: 'Oh Allah! Grant a beneficial life, good morals, sound mind, afiyat and istiqama — being on the correct, true path which Allahu Taala likes — to my parents and to my children and to my relatives and to my friends and to all Muslims. Amin!' },
-                { type: 'hr' },
-                { type: 'arabic', text: 'ٱلْحَمْدُ لِلّٰهِ رَبِّ الْعَالَمِينَ، وَٱلصَّلَاةُ وَٱلسَّلَامُ عَلَىٰ سَيِّدِنَا مُحَمَّدٍ وَعَلَىٰ آلِهِ وَصَحْبِهِ أَجْمَعِينَ' },
-                { type: 'text', text: 'Closing praise and salawat as you began, repeating Alhamdulillah and Salawat upon the Prophet ﷺ.' }
-              ] 
-            } 
-          ] 
-        },
-    
+  'p4': { id: 'p4', title: 'Prayers after Salah', cards: [ { variant: 'default', content: [ { type: 'section-title', text: 'Supplications after Salam' }, { type: 'text', text: 'After the Tashahhud and Salawat, one should make a supplication such as:' }, { type: 'arabic', text: 'اللَّهُمَّ اغْفِرْلِي وَلِوَالِدَيَّ وَلِمَنْ تَوَالَدَ وَلِجَمِيعِ الْمُؤْمِنِينَ وَالْمُؤْمِنَاتِ وَالْمُسْلِمِينَ وَالْمُسْلِمَاتِ الْأَحْيَاءِ مِنْهُمْ وَالْأَمْوَاتِ إِنَّكَ مُجِيبُ الدَّعَوَاتِ بِرَحْمَتِكَ يَا أَرْحَمَ الرَّاحِمِينَ' }, { type: 'text', text: '"O Allah, forgive me and my parents and all those who are born and all the believing men and women, those who have submitted from the males and females, those of them who are alive and those who have died. Verily, You are the One Who answers prayers... through Your Mercy, O the Most Merciful of those who show mercy."' }, { type: 'hr' }, { type: 'text', text: 'Or pray:' }, { type: 'arabic', text: 'اللَّهُمَّ رَبِّ اجْعَلْنِي مُقِيمَ الصَّلَاةِ وَمِنْ ذُرِّيَّتِي رَبَّنَا وَتَقَبَّلْ دُعَاءِ رَبَّنَا اغْفِرْ لِي وَلِوَالِدَيَّ وَلِلْمُؤْمِنِينَ يَوْمَ يَقُومُ الْحِسَابُ' }, { type: 'text', text: '"O Allah, my Lord. Make me establish the prayer, and my offspring; O our Lord! Accept my prayer. O our Lord! Forgive me, and my parents, and all the believers on the Day when Reckoning will take place."' } ] }, { variant: 'default', content: [ { type: 'section-title', text: 'Comprehensive Dua After Salah' }, { type: 'text', text: 'Start with Praise:' }, { type: 'text', text: '"Alhamdullahi Rabbil alamin" (All praise is due to Allah Taala, Creator of all the worlds.)' }, { type: 'hr' }, { type: 'text', text: 'Salawat:' }, { type: 'text', text: '"Was salatu was salamu ala Rasulina Muhammedin wa Alihi we Sahbihi ejmain" (May peace and blessings be upon Prophet Muhammed ‘alayhis-salam, and on his blessed family and noble companions.)' }, { type: 'hr' }, { type: 'text', text: 'Supplication for Acceptance & Forgiveness:' }, { type: 'text', text: '"Allahummaghfir warham wa anta khairul rahimin. Tawaffani musliman we alhiqni bis saliheen" (Oh Allah! Accept the salat that I have performed! Make my last breath be by saying Kalimat ash-Shahada and my migration to the Hereafter be with iman. Forgive and pardon my relatives that have died. Cause me to die as a Muslim and join the righteous.)' }, { type: 'hr' }, { type: 'text', text: 'Protection & Sustenance:' }, { type: 'text', text: '"Allahummaghfirli wa li walidayya wa li ustaziyye walil muminine wal muminat yawma yakumul alhisab" (Oh Allah! Protect me from the evil of Satan, the evil of enemies and the evil of my nafs! Grant goodness, halal and auspicious sustenance to our home! Grant salvation to Muslims! Make the enemies of Muslims wretched and dispersed! With Your Divine Help, help Muslims that are making jihad against unbelievers!)' }, { type: 'hr' },
+                   { type: 'text', text: 'For Health & Guidance:' },
+                  { type: 'text', text: '"Allahumma innaka afuwwun kerimun tuhibbul afwa fa’fu ann" (Oh Allah! You are the One who pardons and forgives. You love to pardon, pardon me. Grant recovery to the ill among us, grant relief to those who are with difficulties among us!)' },
+                  { type: 'text', text: '"Allahumme inni es’elukessihhate wal-afiyete wel-emanete we husnelkhulqi werridae bilqaderi birahmetike ya erhamerrahimin" (Oh Allah! Grant a beneficial life, good morals, sound mind, afiyat and istiqama -being on the correct, true path which Allahu Taala likes-, to my parents and to my children and to my relatives and to my friends and to all Muslims.) Amin!' },
+                  { type: 'hr' },
+                   { type: 'text', text: 'Closing Praise & Salawat:' },
+                   { type: 'text', text: '"Alhamdullahi Rabbil alamin" (All praise is due to Allah Taala, Creator of all the worlds.)' },
+                   { type: 'text', text: '"Allahumme salli ala Seyyidina Muhammidin wa ala ali seyyidina Muhammed....." (Oh Allah, send Your Grace, Honor and Mercy upon Muhammed and upon the family of Muhammed, as You sent Your Grace, Honor and Mercy on Ibrahim....)' },
+                   { type: 'text', text: '"Allahumme barik ala Seyyidina Muhammidin wa ala ali seyyidina Muhammed. Kama barakta ala Ibrahim wa ala ali Ibrahim. Innaka hamidun macid..." (Oh Allah, bless our prophet Muhammed and those who adhere to him, even as You blessed Prophet Ibrahim and those that followed him. You are worthy of all praise....)' },
+                   { type: 'hr' },
+                  { type: 'text', text: 'Final Dua for Good:' },
+                  { type: 'arabic', text: 'اللَّهُمَّ رَبَّنَا آتِنَا فِي الدُّنْيَا حَسَنَةً وَفِي الْآخِرَةِ حَسَنَةً وَقِنَا عَذَابَ النَّارِ' },
+                  { type: 'text', text: '"Allahumme Rabbana atina fid dunya Hasana..."' },
+                  { type: 'text', text: '(Oh Allah, give us what is good in this world, and in the Hereafter, and protect us from the punishment of the Fire.)' },
+                  { type: 'hr' },
+                  { type: 'text', text: 'Conclusion:' },
+                  { type: 'text', text: '"Wal hamdulillahi rabbil alamin" (Praise to Allahu Taala, Creator and Cherisher of all Creation.)' },
+                  { type: 'text', text: '"Astaghfirullah, Astaghfirullah, Astaghfirullah, Astaghfirullah hallazi Al-Karim hallazi la ila ha illa huval hayyul Qayyume wa atubu ileyh" (I seek forgiveness from Allahu Taala, there is no diety except Allah, Who is living, eternal and I turn towards Him.)' }
+                ]
+              }
+            ]
+          },
           'p5': {
             id: 'p5',
             title: 'Duas when Visiting Graves',
@@ -494,7 +470,7 @@ const PAGES_DATA = {
                 variant: 'default',
                 content: [
                   { type: 'section-title', text: 'During Salah' },
-                   { type: 'text', text: 'Rasulullah (ﷺ) always recited it during Salah Before Salam.' },
+                   { type: 'text', text: 'Rasulullah (peace be upon him) always recited it during Salah Before Salam.' },
                   { type: 'arabic', text: 'اللَّهُمَّ اغْفِرْ لِي مَا قَدَّمْتُ وَمَا أَخَّرْتُ وَمَا أَسْرَرْتُ وَمَا أَعْلَنْتُ وَمَا أَسْرَفْتُ وَمَا أَنْتَ أَعْلَمُ بِهِ مِنِّي أَنْتَ الْمُقَدِّمُ وَأَنْتَ الْمُؤَخِّرُ لاَ إِلَهَ إِلاَّ أَنْتَ' },
                   { type: 'text', text: 'Ya Allah, forgive me for the sins I have committed and the sins I have delayed, and the sins I have hidden and the sins I have revealed, and the sins that exceeded my limits and the sins that You know better than me. You are the One Who brings forward and the One Who delays, there is no god except You. [HR. Muslim: 771]' }
                 ]
@@ -618,7 +594,7 @@ const PAGES_DATA = {
                  variant: 'default',
                  content: [
                     { type: 'section-title', text: 'Removing Anger' },
-                    { type: 'text', text: 'Our Prophet (ﷺ), when our mother Aisha (may Allah be pleased with her) was angry, advised her to make the following dua:' },
+                    { type: 'text', text: 'Our Prophet (peace and blessings be upon him), when our mother Aisha (may Allah be pleased with her) was angry, advised her to make the following dua:' },
                     { type: 'arabic', text: 'اللَّهُمَّ اغْفِرْ لِي ذَنْبِي وَأَذْهِبْ غَيْظَ قَلْبِي وَأَجِرْنِي مِنْ مُضِلاَّتِ الْفِتَنِ' },
                     { type: 'text', text: '"O Allah! Forgive my sin, remove the anger from my heart, and protect me from misleading trials." (Tabarani, el-Mu\'cemü\'l-Kebir, XXIII, 338, No: 785)' }
                  ]
@@ -636,7 +612,7 @@ const PAGES_DATA = {
                  variant: 'default',
                  content: [
                     { type: 'section-title', text: 'Prayer Before Sleeping (Wudu)' },
-                    { type: 'text', text: 'The Messenger of Allah (ﷺ) advised to perform ablution before sleeping and recite the following supplication:' },
+                    { type: 'text', text: 'The Messenger of Allah (peace and blessings be upon him) advised to perform ablution before sleeping and recite the following supplication:' },
                     { type: 'arabic', text: 'اللَّهُمَّ أَسْلَمْتُ نَفْسِي إِلَيْكَ، وَوَجَّهْتُ وَجْهِي إِلَيْكَ، وَفَوَّضْتُ أَمْرِي إِلَيْكَ، وَأَلْجَأْتُ ظَهْرِي إِلَيْكَ، رَغْبَةً وَرَهْبَةً إِلَيْكَ، لاَ مَلْجَأَ وَلاَ مَنْجَا مِنْكَ إِلاَّ إِلَيْكَ، آمَنْتُ بِكِتَابِكَ الَّذِي أَنْزَلْتَ، وَبِنَبِيِّكَ الَّذِي أَرْسَلْتَ' },
                     { type: 'text', text: '"O Allah! I have surrendered myself to You. I have turned my face to You. I have entrusted my affair to You. I have learned my back on You, out of desire for You and fear of You. There is no refuge and no escape from You except to You. I believe in Your Book which You revealed and Your Prophet whom You sent." (Bukhari, Da\'awat, 6, 7, 9; Muslim, Dhikr and Dua, 56-57; Abu Dawud, Adab, 98; Tirmidhi, Da\'awat 16; Ibn Majah, Dua, 15)' }
                  ]
