--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             { 
               variant: 'default', 
               content: [ 
-                { type: 'section-title', text: 'Supplications Before Salam' }, 
+                { type: 'section-title', text: 'Supplications After Salam' }, 
                 { type: 'text', text: 'After the Tashahhud and Salawat, one should make a supplication such as:' }, 
                 { type: 'arabic', text: 'اللَّهُمَّ اغْفِرْلِي وَلِوَالِدَيَّ وَلِمَنْ تَوَالَدَ وَلِجَمِيعِ الْمُؤْمِنِينَ وَالْمُؤْمِنَاتِ وَالْمُسْلِمِينَ وَالْمُسْلِمَاتِ الْأَحْيَاءِ مِنْهُمْ وَالْأَمْوَاتِ إِنَّكَ مُجِيبُ الدَّعَوَاتِ بِرَحْمَتِكَ يَا أَرْحَمَ الرَّاحِمِينَ' }, 
                 { type: 'text', text: '"O Allah, forgive me and my parents and all those who are born and all the believing men and women, those who have submitted from the males and females, those of them who are alive and those who have died. Verily, You are the One Who answers prayers... through Your Mercy, O the Most Merciful of those who show mercy."' }, 
@@ -649,9 +649,9 @@
                variant: 'default',
                content: [
                   { type: 'section-title', text: 'Entry and Exit' },
-                  { type: 'text', text: 'Our Lord, in the Holy Qur\'an, has asked our Prophet (peace and blessings be upon him) to make the following dua:' },
+                  { type: 'text', text: 'O Allah, in the Holy Qur\'an, has asked our Prophet (peace and blessings be upon him) to make the following dua:' },
                   { type: 'arabic', text: 'رَبِّ أَدْخِلْنِي مُدْخَلَ صِدْقٍ وَأَخْرِجْنِي مُخْرَجَ صِدْقٍ وَاجْعَلْ لِي مِنْ لَدُنْكَ سُلْطَانًا نَصِيرًا' },
-                  { type: 'text', text: '"...My Lord! Grant me to enter with a truthful entry and to exit with a truthful exit, and grant me from Your presence an assisting authority." (Isra Surah 80. Verse)' }
+                  { type: 'text', text: '"...O Allah! Grant me to enter with a truthful entry and to exit with a truthful exit, and grant me from Your presence an assisting authority." (Isra Surah 80. Verse)' }
                ]
             },
             {
@@ -817,7 +817,7 @@
               variant: 'default',
               content: [
                 { type: 'arabic', text: 'رَبِّ اغْفِرْ لِي خَطِيئَتِي وَجَهْلِي وَإِسْرَافِي فِي أَمْرِي كُلِّهِ وَمَا أَنْتَ أَعْلَمُ بِهِ مِنِّي، اللَّهُمَّ اغْفِرْ لِي خَطَايَايَ وَعَمْدِي وَجَهْلِي وَهَزْلِي، وَكُلُّ ذَلِكَ عِنْدِي، اللَّهُمَّ اغْفِرْ لِي مَا قَدَّمْتُ وَمَا أَخَّرْتُ وَمَا أَسْرَرْتُ وَمَا أَعْلَنْتُ أَنْتَ الْمُقَدِّمُ وَأَنْتَ الْمُؤَخِّرُ وَأَنْتَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ.' },
-                { type: 'text', text: 'My Lord, forgive my mistakes, my ignorance, and my extravagance in all my affairs, and what You know better than I do. O Allah, forgive my mistakes, my intentional acts, my ignorance, and my jesting, and all of that is with me. O Allah, forgive me what I have sent forth and what I have held back, and what I have concealed and what I have declared. You are the Advancer and You are the Delayer, and You are over all things competent.' }
+                { type: 'text', text: O Allah, forgive my mistakes, my ignorance, and my extravagance in all my affairs, and what You know better than I do. O Allah, forgive my mistakes, my intentional acts, my ignorance, and my jesting, and all of that is with me. O Allah, forgive me what I have sent forth and what I have held back, and what I have concealed and what I have declared. You are the Advancer and You are the Delayer, and You are over all things competent.' }
               ]
             },
             {
@@ -859,21 +859,21 @@
               variant: 'default',
               content: [
                 { type: 'arabic', text: 'رَبِّ هَبْ لِي مِنْ لَدُنْكَ ذُرِّيَّةً طَيِّبَةً إِنَّكَ سَمِيعُ الدُّعَاءِ.' },
-                { type: 'text', text: 'My Lord, grant me from Your presence a good offspring. Indeed, You are the Hearer of supplication.' }
+                { type: 'text', text: O Allah, grant me from Your presence a good offspring. Indeed, You are the Hearer of supplication.' }
               ]
             },
             {
               variant: 'default',
               content: [
                 { type: 'arabic', text: 'رَبَّنَا لاَ تُؤَاخِذْنَا إِنْ نَسِينَا أَوْ أَخْطَأْنَا رَبَّنَا وَلاَ تَحْمِلْ عَلَيْنَا إِصْرًا كَمَا حَمَلْتَهُ عَلَى الَّذِينَ مِنْ قَبْلِنَا رَبَّنَا وَلاَ تُحَمِّلْنَا مَا لاَ طَاقَةَ لَنَا بِهِ وَاعْفُ عَنَّا وَاغْفِرْ لَنَا وَارْحَمْنَا أَنْتَ مَوْلاَنَا فَانْصُرْنَا عَلَى الْقَوْمِ الْكَافِرِينَ.' },
-                { type: 'text', text: 'Our Lord, do not impose blame upon us if we forget or err. Our Lord, and lay not upon us a burden like that which You laid upon those before us. Our Lord, and burden us not with that which we have no ability to bear. And pardon us; and forgive us; and have mercy upon us. You are our Protector, so grant us victory over the disbelieving people.' }
+                { type: 'text', text: 'O Allah,, do not impose blame upon us if we forget or err. O Allah, and lay not upon us a burden like that which You laid upon those before us. Our Lord, and burden us not with that which we have no ability to bear. And pardon us; and forgive us; and have mercy upon us. You are our Protector, so grant us victory over the disbelieving people.' }
               ]
             },
             {
               variant: 'default',
               content: [
                 { type: 'arabic', text: 'اللهُ أَكْبَرُ، اللَّهُمَّ أَهْلِهِ عَلَيْنَا بِالْأَمْنِ وَالْإِيمَانِ، وَالسَّلَامَةِ وَالْإِسْلَامِ، وَالتَّوْفِيقِ لِمَا تُحِبُّ رَبَّنَا وَتَرْضَى، رَبَّنَا وَرَبُّكَ اللَّهُ.' },
-                { type: 'text', text: 'Allah is the Greatest. O Allah, make it (the new moon/month) dawn upon us with security and faith, and safety and Islam, and success in what our Lord loves and is pleased with. Our Lord and your Lord is Allah.' }
+                { type: 'text', text: 'Allah is the Greatest. O Allah, make it (the new moon/month) dawn upon us with security and faith, and safety and Islam, and success in what O Allah, loves and is pleased with. O Allah, and your Lord is Allah.' }
               ]
             },
             {
